js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenJsModules/js-module-a.js
(function (_) {
  'use strict';
  function externalDemoFunction() { return 0; }

  _.externalDemoFunction = externalDemoFunction;

  return _
}(module.exports));
